Experiment #2: 3D Cube - Upload

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Raresh's Mobile VR Experiments</title>
+        
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Here are some experiment I've made so far.</p>
+        <p>Here are some experiments I've made so far.</p>
         <ul>
-            <li><a href="3d-zoom">3D Zooming Text</a></li>
+            <li><a href="3d-zoom/">3D Zooming Text</a></li>
+            <li><a href="3d-cube/">3D Cube</a></li>
         </ul>
+        <footer>
+            <p><i class="fas fa-code"></i> with <i class="far fa-heart"></i>
+                by <a href="http://thegreatrazz.nz/">@thegreatrazz</a></p>
+        </footer>
     </body>
 </html>
